2011-07-02  Ilija Kocho  <ilijak@siva.com.mk>

	* src/KSZ8041.c: More silicon revisions.  [Bugzilla 1001274]

2010-06-10  Christophe Coutand <ccoutand@stmi.com>

	* doc/eth_phy.sgml, include/eth_phy.h: Add Ethernet Gigabit Mode
	* cdl/phy_eth_drivers.cdl: Add new PHY support
	* src/IP101A.c, src/IP101A.h: Contributed by Edgar Grimberg
	* src/VSC8244.c, src/VSC8244.h: Contributed by Christophe Coutand
	* src/VSC8641.c, src/VSC8641.h: Contributed by Sachin Sushil Chaddha

2008-12-30  John Dallaway  <john@dallaway.org.uk>

	* cdl/phy_eth_drivers.cdl: Reference per-package documentation.

2008-10-28  Oliver Munz <munz@speag.ch>

	* cdl/phy_eth_drivers.cdl: 
	* src/KSZ8041.c: Add support for Micrel KSZ8041 PHY
	
2008-08-05  Uwe Kindler <uwe_kindler@web.de>

	* cdl/phy_eth_drivers.cdl: 
	* src/KSZ8001.c: Add support for Micrel KSZ8001 PHY
	
2007-04-06  Uwe Kindler <uwe_kindler@web.de>

	* cdl/phy_eth_drivers.cdl: 
	* src/KS8721.c: Add support for Micrel KS8721 PHY
	
2007-01-17  John Eigelaar <jeigelaar@mweb.co.za>

	* cdl/phy_eth_drivers.cdl: 
	* src/DM9161A.c: Add support for Davicom 9161A.

2006-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/eth_phy.sgml: Fixed a few typos

2006-03-30  Jay Foster <jay@systech.com>
	* include/eth_phy.h:  Add default mode value for _eth_phy_cfg().
	* cdl/phy_eth_drivers.cdl: Add support for ICS189x.
	* include/eth_phy_dev.h:
	* src/AM79C874.c:
	* src/DP83847.c:
	* src/INLXT972.c: Make debug output CDL configurable.
	* src/eth_phy.c: Fix bug in _eth_phy_init() that prevented using
					 a PHY MII address other than 0.
	* src/ics189x.c: New

2005-08-25  Markus Schade <marks@peppercon.de>

	* src/INLXT972.c: 
	* cdl/phy_eth_drivers.cdl: Add support for Intel LXT972

2004-10-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/phy_eth_drivers.cdl: We call the delay function via VV so we
	require VV support.

2003-11-07  Gary Thomas  <gary@mlbassoc.com>

	* src/DP83847.c: 
	* src/AM79C874.c: 